--- a/mySouthTyrol/StartingVC.xib
+++ b/mySouthTyrol/StartingVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StartingVC" customModule="mySouthTyrol" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="mPO-UT-xx5"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,21 +15,40 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stock-photo-56041408" translatesAutoresizingMaskIntoConstraints="NO" id="nze-3k-Mo2">
-                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2H5A6782-1829x1030" translatesAutoresizingMaskIntoConstraints="NO" id="nze-3k-Mo2">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="South Tyrol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thZ-VE-7tn">
+                    <rect key="frame" x="22" y="25" width="332" height="86"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="60"/>
+                    <color key="textColor" red="0.97257023303715895" green="1" blue="0.97160860613112143" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                        <rect key="frame" x="23" y="24" width="321" height="81"/>
+                    </variation>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Discover breathtaking nature and heartwarming people." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OVt-JS-g8v">
+                    <rect key="frame" x="22" y="106" width="314" height="71"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                        <rect key="frame" x="23" y="107" width="321" height="57"/>
+                    </variation>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="nze-3k-Mo2" secondAttribute="bottom" id="CvM-uE-XJ3"/>
                 <constraint firstAttribute="bottom" secondItem="nze-3k-Mo2" secondAttribute="bottom" id="NOY-vG-uuC"/>
                 <constraint firstAttribute="trailing" secondItem="nze-3k-Mo2" secondAttribute="trailing" id="cdY-ng-h8L"/>
+                <constraint firstItem="nze-3k-Mo2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="mSV-iO-ko7"/>
                 <constraint firstItem="nze-3k-Mo2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="r7c-kV-GfT"/>
+                <constraint firstItem="nze-3k-Mo2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rTV-fW-mjr"/>
                 <constraint firstItem="nze-3k-Mo2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uRd-aP-wGS"/>
+                <constraint firstAttribute="trailing" secondItem="nze-3k-Mo2" secondAttribute="trailing" id="wxB-Il-vXZ"/>
             </constraints>
             <variation key="default">
-                <mask key="subviews">
-                    <exclude reference="nze-3k-Mo2"/>
-                </mask>
                 <mask key="constraints">
                     <exclude reference="NOY-vG-uuC"/>
                     <exclude reference="cdY-ng-h8L"/>
@@ -40,6 +59,8 @@
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="subviews">
                     <include reference="nze-3k-Mo2"/>
+                    <include reference="thZ-VE-7tn"/>
+                    <include reference="OVt-JS-g8v"/>
                 </mask>
                 <mask key="constraints">
                     <include reference="NOY-vG-uuC"/>
@@ -49,8 +70,22 @@
                 </mask>
             </variation>
         </view>
+        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Df9-aN-mcS">
+            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+            <nil key="highlightedColor"/>
+        </label>
+        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HcJ-5T-Uj4">
+            <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+            <nil key="highlightedColor"/>
+        </label>
     </objects>
     <resources>
-        <image name="stock-photo-56041408" width="1500" height="845"/>
+        <image name="2H5A6782-1829x1030" width="1829" height="1030"/>
     </resources>
 </document>
