fixed crashing after calling dismissViewControllerAnimated(_:)

--- a/mySouthTyrol/MyPlace.xib
+++ b/mySouthTyrol/MyPlace.xib
@@ -27,7 +27,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="g2g-ar-IL3">
                             <rect key="frame" x="0.0" y="0.0" width="88" height="249"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Population" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wub-Hk-xWx">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Population" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wub-Hk-xWx">
                                     <rect key="frame" x="0.0" y="0.0" width="88" height="229"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                     <color key="textColor" red="0.042505095389999997" green="0.24602595299999999" blue="0.50336680970000003" alpha="1" colorSpace="calibratedRGB"/>
